<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/txtItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/jockey_one"
        android:text="@string/itemName"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txtItemQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/jockey_one"
        android:text="@string/itemQuantity"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtItemName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtItemDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/jockey_one"
        android:text="@string/datetime"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtItemName"
        app:layout_constraintStart_toStartOf="parent" />

<!--    <TextView-->
<!--        android:id="@+id/txtItemPrice"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="26dp"-->
<!--        android:layout_marginEnd="22dp"-->
<!--        android:layout_marginBottom="26dp"-->
<!--        android:fontFamily="@font/jockey_one"-->
<!--        android:text="@string/itemPrice"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="25sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/txtItemTotalCost"-->
<!--        app:layout_constraintStart_toEndOf="@+id/txtItemQuantity"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.0" />-->

    <TextView
        android:id="@+id/txtItemTotalCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/jockey_one"
        android:text="@string/totalCost"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtItemDate"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>